# sqsh

./: .gitignore  .tarpaulin.toml  Cargo.toml  LICENSE  README.md  config.example.toml  docker-compose.yml  index.html  install.sh
.github/workflows/: build-and-publish.yml  ci.yml  release.yml  tag-and-release.yml
docker/init/: 01_schema.sql  02_seed_data.sql  03_generate_events.sql
src/: claude.rs  completion.rs  config.rs  connection.rs  error.rs  i18n.rs  lib.rs  main.rs  perf.rs  query.rs  selector.rs
src/tui/: input.rs  mod.rs  render.rs  skim.rs
tests/: integration_test.rs  tui_state_test.rs
